--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body {
     display: flex;
     flex-direction: column;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding: 0;
+    margin: 0;
 }
 
 a {
@@ -21,11 +23,23 @@ ul {
     
 }
 
+/* Header Styles */
+
+.header_button {
+    border-radius: 5px;
+    border-width: 0;
+    background-color: #3882F6;
+    color: #F9FAF8;
+    padding: 5px 20px 5px 20px;
+}
+
 .awesome-text {
     display: flex;
     align-items: flex-start;
     flex-wrap: wrap;
     text-align: left;
+    max-width: 350px;
+    margin-right: 40px;
 }
 
 .holder {
@@ -42,6 +56,9 @@ ul {
 .awesome-container {
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    margin: 30px 0px 60px 0px;
+    align-items: center;
 }
 
 .nav-container {
@@ -57,10 +74,62 @@ ul {
     flex-direction: column;
 }
 
-.footer-container {
-    background-color: #1F2937;
+.hero_main {
+    font-size: 48px;
+    font-weight: bolder;
+    color: #F9FAF8;
+    margin-bottom: 0;
 }
+
+.hero_secondary {
+    font-size: 18px;
+    color: #F9FAF8;
+    margin-top: 0px;
+}
+
+/*Information Styles */
+
+.information_container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 30px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-basis: 100px;
+    flex-wrap: wrap;
+}
+
+.info_header {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
+}
+
+.info_box {
+    height: 100px;
+    width: 100px;
+    border: 2px solid #3882F6;
+    border-radius: 5px;
+}
+
+.subtext {
+    color: #e5e7eb;
+}
+
+/*Quote Styles */
 
 .quote-container {
     background-color: #e5e7eb;
 }
+
+/* Footer Styles */
+
+.footer-container {
+    background-color: #1F2937;
+}
+
